// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no props 1`] = `
.c0 {
  position: absolute;
  right: 24px;
  top: 24px;
  z-index: 1000;
  font-size: 18px;
  width: 357px;
  height: 90px;
  background-color: #FFFFFF;
  border-color: #2F6450;
  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  visibility: hidden;
}

<div
  className="c0"
/>
`;

exports[`renders correctly with show = true & no type prop 1`] = `
.c0 {
  position: absolute;
  right: 24px;
  top: 24px;
  z-index: 1000;
  font-size: 18px;
  width: 357px;
  height: 90px;
  background-color: #FFFFFF;
  border-color: #2F6450;
  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  visibility: visible;
}

<div
  className="c0"
/>
`;

exports[`renders correctly with show = true & type = api-error 1`] = `
.c0 {
  position: absolute;
  right: 24px;
  top: 24px;
  z-index: 1000;
  font-size: 18px;
  width: 357px;
  height: 90px;
  background-color: #FFFFFF;
  border-color: #DC0A0A;
  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  visibility: visible;
}

<div
  className="c0"
  type="api-error"
/>
`;

exports[`renders correctly with show = true & type = api-success 1`] = `
.c0 {
  position: absolute;
  right: 24px;
  top: 24px;
  z-index: 1000;
  font-size: 18px;
  width: 357px;
  height: 90px;
  background-color: #FFFFFF;
  border-color: #2F6450;
  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  visibility: visible;
}

<div
  className="c0"
  type="api-success"
/>
`;
